add fast test environments & add tanh action transform

--- a/cfg/algo/mappo.yaml
+++ b/cfg/algo/mappo.yaml
@@ -31,6 +31,8 @@ actor:
   attn_encoder: PartialAttentionEncoder # if applicable
   use_orthogonal: true
 
+  tanh: true
+
   # rnn:
   #   cls: gru
   #   kwargs:
