add tasks & fix some bugs

--- a/cfg/algo/mappo.yaml
+++ b/cfg/algo/mappo.yaml
@@ -31,7 +31,7 @@ actor:
   attn_encoder: PartialAttentionEncoder # if applicable
   use_orthogonal: true
 
-  tanh: true
+  tanh: false
 
   # rnn:
   #   cls: gru
