--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,14 +1,14 @@
 # hydra.job.chdir: false
 
-headless: false
+headless: true
 
 sim: ${task.sim}
 env: ${task.env}
 
-total_frames: 250_000_000
+total_frames: 500_000_000 #1000_000_000
 max_iters: -1
-eval_interval: -1
-save_interval: -1
+eval_interval: 2000
+save_interval: 4000
 seed: 0
 
 viewer:
@@ -28,6 +28,6 @@ wandb:
   tags: 
 
 defaults:
-  - task: Hover
+  - task: FormationBallForward
   - algo: mappo
   - _self_
