--- a/cfg/task/FormationBallForward.yaml
+++ b/cfg/task/FormationBallForward.yaml
@@ -8,8 +8,8 @@ defaults:
 
 env: 
   num_envs: 1024
-  env_spacing: 6
-  max_episode_length: 600
+  env_spacing: 12
+  max_episode_length: 700
 
 target_height: [0, 0, 1.5]
 drone_model: Hummingbird
@@ -21,15 +21,17 @@ reward_effort_weight: 0.1
 
 
 safe_distance: 0.4
-ball_safe_distance: 0.35
+ball_safe_distance: 0.3
 soft_ball_safe_distance: 0.5
 extra_soft_ball_safe_distance: 0.8
 ball_reward_coeff: 20. # 40
-ball_hard_reward_coeff: 10. # 10
+ball_hard_reward_coeff: 20. # 10
 formation: regular_pentagon #dense_square # hexagon # tetragon
 
 flatten_obs: true #false
 flatten_state: false
 
-action_transform: rate
+action_transform: null
 #action_transform: multidiscrete:5
+
+stage: 2
