--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,10 +5,10 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-total_frames: 500_000_000 #1000_000_000
+total_frames: 200_000_000 #1000_000_000
 max_iters: -1
-eval_interval: 2000
-save_interval: 4000
+eval_interval: 500
+save_interval: 500
 seed: 0
 
 viewer:
@@ -18,7 +18,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}
+  run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}-${oc.select:..task.stage,none}
   job_type: train
   entity: marl-drones
   project: omnidrones
