--- a/cfg/task/FormationBallForward.yaml
+++ b/cfg/task/FormationBallForward.yaml
@@ -14,7 +14,7 @@ env:
 target_height: [0, 0, 1.5]
 target_vel: [0., 3.0, 0.]
 ball_speed: 5.
-drone_model: Hummingbird
+drone_model: Hummingbird # 直径 0.34
 force_sensor: false
 time_encoding: true
 throw_threshold: 150
@@ -22,12 +22,13 @@ formation_size: 1
 reward_effort_weight: 0.1
 
 
-safe_distance: 0.4
-ball_safe_distance: 0.35
-soft_ball_safe_distance: 0.5
-extra_soft_ball_safe_distance: 0.8
-ball_reward_coeff: 20. # 40
-ball_hard_reward_coeff: 20. # 10
+hard_safe_distance: 0.4
+safe_distance: 0.6
+ball_hit_distance: 0.25 # hit
+ball_safe_distance: 0.3 # hard penalty
+soft_ball_safe_distance: 0.4 # soft penalty
+ball_reward_coeff: 1. # 40
+ball_hard_reward_coeff: 10. # 10
 formation: regular_pentagon #dense_square # hexagon # tetragon
 
 flatten_obs: true #false
