change reward and mask in FormationBallForward

--- a/cfg/task/FormationBallForward.yaml
+++ b/cfg/task/FormationBallForward.yaml
@@ -21,6 +21,11 @@ throw_threshold: 150
 formation_size: 1
 reward_effort_weight: 0.1
 
+terminated_reward: 10.
+crash_penalty: -10.
+too_close_penalty: -10.
+hit_penalty: -10.
+
 
 hard_safe_distance: 0.4
 safe_distance: 0.6
