--- a/cfg/task/FormationMultiBallForward.yaml
+++ b/cfg/task/FormationMultiBallForward.yaml
@@ -7,30 +7,37 @@ defaults:
   # - /base/randomization_base@_here_
 
 env: 
-  num_envs: 1024
-  env_spacing: 6
-  max_episode_length: 600
+  num_envs: 512
+  env_spacing: 12
+  max_episode_length: 700
 
-ball_num: 6
+ball_num: 4
 target_height: [0, 0, 1.5]
-drone_model: Hummingbird
+target_vel: [0., 3.0, 0.]
+ball_speed: 5.
+drone_model: Hummingbird # 直径 0.34
 force_sensor: false
 time_encoding: true
 throw_threshold: 150
 formation_size: 1
 reward_effort_weight: 0.1
 
+terminated_reward: 10.
+crash_penalty: -10.
+too_close_penalty: -10.
+hit_penalty: -10.
 
-safe_distance: 0.4
-ball_safe_distance: 0.35
-soft_ball_safe_distance: 0.5
-extra_soft_ball_safe_distance: 0.8
-ball_reward_coeff: 20. # 40
+
+hard_safe_distance: 0.4
+safe_distance: 0.6
+ball_hit_distance: 0.25 # hit
+ball_safe_distance: 0.3 # hard penalty
+soft_ball_safe_distance: 0.4 # soft penalty
+ball_reward_coeff: 1. # 40
 ball_hard_reward_coeff: 10. # 10
 formation: regular_pentagon #dense_square # hexagon # tetragon
 
-flatten_obs: true #false
+flatten_obs: false
 flatten_state: false
 
-action_transform: rate
-#action_transform: multidiscrete:5
+action_transform: null
