--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -7,8 +7,8 @@ env: ${task.env}
 
 total_frames: 400_000_000 #1000_000_000
 max_iters: -1
-eval_interval: 1000
-save_interval: 1000
+eval_interval: -1
+save_interval: -1
 seed: 0
 
 viewer:
@@ -20,14 +20,14 @@ wandb:
   group: ${oc.select:..task.name}
   run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}-${oc.select:..task.stage,none}
   job_type: train
-  entity: marl-drones
-  project: omnidrones
-  mode: online # set to 'disabled' when debugging locally, online
+  entity: marl-drones # new wandb team name
+  project: FormationMultiBall
+  mode: online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: FormationBallForward
+  - task: FormationMultiBallForward
   - algo: mappo
   - _self_
