--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -18,10 +18,10 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}-${oc.select:..task.stage,none}
+  run_name: ${oc.select:..task.ball_speed,test}-${oc.select:..task.target_vel,none}-${oc.select:..task.stage,none}
   job_type: train
-  entity: nics-marl
-  project: omnidrones
+  entity: nics_marl
+  project: rapid_dodge
   mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
