--- a/cfg/task/FormationMultiBallForward.yaml
+++ b/cfg/task/FormationMultiBallForward.yaml
@@ -8,7 +8,7 @@ defaults:
 
 env: 
   num_envs: 512
-  env_spacing: 12
+  env_spacing: 15
   max_episode_length: 700
 
 ball_num: 4
@@ -37,7 +37,7 @@ ball_reward_coeff: 1. # 40
 ball_hard_reward_coeff: 10. # 10
 formation: regular_pentagon #dense_square # hexagon # tetragon
 
-flatten_obs: false
+flatten_obs: true
 flatten_state: false
 
 action_transform: null
