fix multiball when ball_num=1

--- a/cfg/task/FormationMultiBallForward.yaml
+++ b/cfg/task/FormationMultiBallForward.yaml
@@ -33,8 +33,11 @@ safe_distance: 0.6
 ball_hit_distance: 0.25 # hit
 ball_safe_distance: 0.3 # hard penalty
 soft_ball_safe_distance: 0.4 # soft penalty
-ball_reward_coeff: 1. # 40
+ball_reward_coeff: 5. # 40
 ball_hard_reward_coeff: 10. # 10
+formation_coeff: 1.
+velocity_coeff: 1.
+height_coeff: 1.
 formation: regular_pentagon #dense_square # hexagon # tetragon
 
 flatten_obs: true
