--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -20,7 +20,7 @@ wandb:
   group: ${oc.select:..task.name}
   run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}
   job_type: train
-  entity: marl-drones
+  entity: nics_marl
   project: omnidrones
   mode: online # set to 'disabled' when debugging locally
   run_id: 
