--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -30,16 +30,23 @@ headless: false
 sim: ${task.sim}
 env: ${task.env}
 
-total_frames: 250_000_000
-max_iters: -1
-eval_interval: -1
-save_interval: -1
-seed: 0
+# total_frames: 250_000_000
+# max_iters: -1
+# eval_interval: -1
+# save_interval: -1
+# seed: 0
+total_frames: 100_000_000_000
+max_iters: 5000
+eval_interval: 100
+save_interval: 100
+seed: 1
 
 viewer:
   resolution: [960, 720]
-  eye: [8, 0., 6.]
-  lookat: [0., 0., 1.]
+  # eye: [8, 0., 6.]
+  # lookat: [0., 0., 1.]
+  eye: [2, 2, 2]
+  lookat: [0., 0., 0.]
 
 wandb:
   group: ${oc.select:..task.name}
