--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -20,14 +20,14 @@ wandb:
   group: ${oc.select:..task.name}
   run_name: ${oc.select:..task.name,test}-${oc.select:..task.target_vel,none}-${oc.select:..task.stage,none}
   job_type: train
-  entity: nics_marl
-  project: Hover
+  entity: sapio-s
+  project: FormationForward
   mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: Hover
+  - task: FormationForward
   - algo: mappo
   - _self_
