--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,7 +1,27 @@
 # exp
 num_agents: 3
-num_obstacles: 5
+num_obstacles: 7 # total number of obstacles, including capsules
 obstacle_size: 0.05
+
+capsules:
+  num: 2
+  cap0:
+    translation: 
+      x: 0.
+      y: 0.
+      z: 0.
+    axis: 'Z'
+    radius: 0.04
+    height: 0.5
+  cap1:
+    translation: 
+      x: 0.5
+      y: 0.
+      z: 0.
+    axis: 'Z'
+    radius: 0.04
+    height: 1
+
 v_drone: 1.0
 v_low: 1.3
 v_high: 5.0
