--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-total_frames: 600_000_000 #1000_000_000
+total_frames: 300_000_000 #1000_000_000
 max_iters: -1
 eval_interval: -1
 save_interval: -1
@@ -20,14 +20,14 @@ wandb:
   group: ${oc.select:..task.name}
   run_name: ${oc.select:..task.name,test}-${oc.select:..task.target_vel,none}-${oc.select:..task.stage,none}
   job_type: train
-  entity: sapio-s
-  project: FormationForward
+  entity: sapios
+  project: Track
   mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: FormationForward
+  - task: Track
   - algo: mappo
   - _self_
