--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,21 +6,21 @@ obstacle_size: 0.05
 capsules:
   num: 2
   cap0:
-    translation: 
-      x: 0.
-      y: 0.
-      z: 0.
-    axis: 'Z'
-    radius: 0.04
-    height: 0.5
-  cap1:
-    translation: 
+    translation:
       x: 0.5
       y: 0.
       z: 0.
     axis: 'Z'
-    radius: 0.04
-    height: 1
+    radius: 0.06
+    height: 0.6
+  cap1:
+    translation: 
+      x: -0.2
+      y: -0.2
+      z: 0.
+    axis: 'Y'
+    radius: 0.1
+    height: 0.4
 
 v_drone: 1.0
 v_low: 1.3
@@ -72,8 +72,8 @@ wandb:
   group: ${oc.select:..task.name}
   run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}
   job_type: train
-  entity: nics_marl
-  project: omnidrones
+  entity: tangwh # nics_marl
+  project: omnidrones_render
   mode: online # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
