Update: Add detailed annotation to PP env

--- a/cfg/algo/mappo.yaml
+++ b/cfg/algo/mappo.yaml
@@ -13,7 +13,7 @@ normalize_advantages: True
 
 reward_weights: null # null means all 1.0
 share_actor: false
-critic_input: obs # `obs` or `state`
+critic_input: state # `obs` or `state`
 
 actor:
   lr: 0.0005
