--- a/cfg/eval.yaml
+++ b/cfg/eval.yaml
@@ -13,7 +13,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}
+  run_name: ${oc.select:..Hover_crazyflie_origin_withrandom_wolatency.name,test}-${oc.select:..algo.name,none}
   job_type: train
   entity: marl-drones
   project: omnidrones
