--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -43,3 +43,8 @@ rotor_configuration:
   - 3.92699082
   - 5.49778714
   time_constant: 0.43
+controller_configuration:
+  gain:
+  - 0.0052
+  - 0.0052
+  - 0.00025
