--- a/cfg/task/Hover.yaml
+++ b/cfg/task/Hover.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 4096
+  num_envs: 10
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -25,14 +25,14 @@ time_encoding: true
 # sim2real options
 add_noise: false
 action_filter: false
-latency: true
+latency: false
 action_noise: false
 
-randomization:
-  drone:
-    train:
-      mass_scale: [1., 1.3]
-      inertia_scale: [0.7, 1.3]
+# randomization:
+#   drone:
+#     train:
+#       mass_scale: [1., 1.3]
+#       inertia_scale: [0.7, 1.3]
       # t2w_scale: [0.7, 1.3]
       # f2m_scale: [0.7, 1.3]
       # drag_coef_scale: [0, 0.3]
