--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -18,12 +18,12 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Hover_crazyflie_origin_worandom_wolatency
-  run_name: debugs
+  run_name: Hover_crazyflie_origin_worandom_wolatency_simopt
+  # run_name: debugs
   job_type: train
   entity: chenjy
   project: Hover
-  mode: disabled # set to 'disabled' when debugging locally, online
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
