origin config for crazyflie

--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -41,3 +41,9 @@ rotor_configuration:
   - 2.35619449
   - 3.92699082
   - 5.49778714
+  time_constant: 0.43
+controller_configuration:
+  gain:
+  - 0.0052
+  - 0.0052
+  - 0.00025
