--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -6,7 +6,7 @@ inertia:
   yy: 1.4e-5
   yz: 0.0
   zz: 2.17e-5
-mass: 0.03
+mass: 0.03 # only set to controller
 l: 0.096
 drag_coef: 0.2
 rotor_configuration:
