--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -21,17 +21,18 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Hover_crazyflie_origin_worandom_wolatency_load
-  run_name: debug
+  # run_name: Track_crazyflie_opt_worandom_wolatency_little_origingain_optothers
+  run_name: Track_8_worandom
   job_type: train
   entity: chenjy
-  project: Hover
+  project: Track
   mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: Hover
+  # - task: Hover
+  - task: Track
   - algo: mappo
   - _self_
