--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -1,41 +1,41 @@
 update_sim: True
 name: crazyflie
 inertia:
-  xx: 1.2600000172824367e-05
+  xx: 1.4e-5
   xy: 0.0
   xz: 0.0
-  yy: 1.540000021122978e-05
+  yy: 1.4e-5
   yz: 0.0
-  zz: 1.9529999735823367e-05
-mass: 0.030800000950694087
+  zz: 2.17e-5
+mass: 0.03 # only set to controller
 l: 0.096
-drag_coef: 0.18000000268220903
+drag_coef: 0.2
 rotor_configuration:
   arm_lengths:
-  - 0.03870000131428242
-  - 0.03870000131428242
-  - 0.03870000131428242
-  - 0.03870000131428242
+  - 0.043
+  - 0.043
+  - 0.043
+  - 0.043
   directions:
   - -1.0
   - 1.0
   - -1.0
   - 1.0
   force_constants:
-  - 2.592000054590926e-8 # kf
-  - 2.592000054590926e-8
-  - 2.592000054590926e-8
-  - 2.592000054590926e-8
+  - 2.88e-8 # kf
+  - 2.88e-8
+  - 2.88e-8
+  - 2.88e-8
   max_rotation_velocities:     
-  - 2083.5      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
-  - 2083.5
-  - 2083.5
-  - 2083.5
-  moment_constants: # km
-  - 6.516000239376041e-10
-  - 6.516000239376041e-10
-  - 6.516000239376041e-10
-  - 6.516000239376041e-10
+  - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
+  - 2315
+  - 2315
+  - 2315
+  moment_constants:
+  - 7.24e-10
+  - 7.24e-10
+  - 7.24e-10
+  - 7.24e-10
   num_rotors: 4
   rotor_angles:
   - 0.78539816
@@ -45,6 +45,6 @@ rotor_configuration:
   time_constant: 0.43
 controller_configuration:
   gain:
-  - 0.2220551101997332
-  - 0.07955637363308637
-  - 0.025000001187436283
+  - 0.0052
+  - 0.0052
+  - 0.00025
