--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -51,18 +51,24 @@ controller_configuration:
   # obj: body_rate, tunable: gain, loss: 0.014204811304807663
   # gain: [5.2e-05, 5.2e-05, 0.025]
 
-  # obj: body_rate, tunable: gain, kf, loss: 0.005412185098975897
-  # moment_constants: 2.310088612641514e-06
-  # gain: [0.010428581332060781, 0.008974498698576762, 0.02111932814550382]
-  
-  # obj: body_rate, tunable: gain, kf, km loss: 0.007685973308980465
-  # force_constants: 2.407660129164616e-06
-  # moment_constants: 6.83986763225618e-08
-  # gain: [5.2e-05, 0.014772306598269377, 0.018230667535659984]
+  # obj: body_rate, tunable: gain(0.01-100), kf, km(0.9-1.1) loss: 0.004260895773768425
+  # force_constants: 3.158161639642838e-08
+  # moment_constants: 6.516e-10
+  # gain: [5.2e-05, 0.009761479223729465, 0.012799196068990161]
+
+  # obj: body_rate, tunable: first kf, km, final gain loss: 0.014446603134274483->0.012447443790733814
+  # force_constants: 3.0665997810545084e-08
+  # moment_constants: 6.346179464813402e-10
+  # gain: [0.011475612589626724, 5.2e-05, 0.025]
+
+  # obj: body_rate, tunable: first kf, km, max_vel, final gain loss: 0.014446603134274483 -> 0.012443490326404572
+  # force_constants: 2.818244042554078e-08
+  # max_rotation_velocities: 2470.604467517806
+  # moment_constants: 7.004549640284205e-10
+  # gain: [0.011394534819803867, 5.2e-05, 0.025]
 
   # obj: body_rate, tunable: kf, fixed gain loss: 0.014446577057242393
   # moment_constants: 7.491028842190664e-07
-
 
   # obj: motor_thrust, tunable: gain, loss: 0.22173520922660828
   # gain: [5.2e-05, 5.2e-05, 2.5e-06]
