--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -56,10 +56,10 @@ controller_configuration:
   # moment_constants: 6.516e-10
   # gain: [5.2e-05, 0.009761479223729465, 0.012799196068990161]
 
-  # obj: body_rate, tunable: gain, kf, km(0.9-1.1) loss: 
-  # force_constants: 
-  # moment_constants: 
-  # gain: 
+  # obj: body_rate, tunable: gain, kf, km(0.9-1.1) loss: 0.014017177745699883
+  # force_constants: 3.168e-08
+  # moment_constants: 7.917246163538007e-10
+  # gain: 0.00572, 0.00572, 0.000275
 
   # obj: body_rate, tunable: first kf, km, final gain loss: 0.014446603134274483->0.012447443790733814
   # force_constants: 3.0665997810545084e-08
