--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -57,7 +57,7 @@ inertia:
   yy: 1.4e-5
   yz: 0.0
   zz: 2.17e-5
-mass: 0.03 # only set to controller
+mass: 0.0343
 l: 0.096
 drag_coef: 0.2
 rotor_configuration:
@@ -82,14 +82,14 @@ rotor_configuration:
   - 2315
   - 2315
   moment_constants:
-  - 2.310088612641514e-06
-  - 2.310088612641514e-06
-  - 2.310088612641514e-06
-  - 2.310088612641514e-06
-  # - 7.24e-10
-  # - 7.24e-10
-  # - 7.24e-10
-  # - 7.24e-10
+  # - 2.310088612641514e-06
+  # - 2.310088612641514e-06
+  # - 2.310088612641514e-06
+  # - 2.310088612641514e-06
+  - 7.24e-10
+  - 7.24e-10
+  - 7.24e-10
+  - 7.24e-10
   num_rotors: 4
   rotor_angles:
   - 0.78539816
@@ -99,9 +99,9 @@ rotor_configuration:
   time_constant: 0.43
 controller_configuration:
   gain:
-  - 0.010428581332060781
-  - 0.008974498698576762
-  - 0.02111932814550382
-  # - 0.0052
-  # - 0.0052
-  # - 0.00025
+  # - 0.010428581332060781
+  # - 0.008974498698576762
+  # - 0.02111932814550382
+  - 0.0052
+  - 0.0052
+  - 0.00025
