--- a/cfg/task/HideAndSeek.yaml
+++ b/cfg/task/HideAndSeek.yaml
@@ -7,7 +7,7 @@ defaults:
   - /base/randomization_base@_here_
 
 env:
-  num_envs: 64
+  num_envs: 512
 
 drone_model: Crazyflie
 force_sensor: false
@@ -18,6 +18,6 @@ time_encoding: true
 # reward_motion_smoothness_weight: 0.0
 # reward_distance_scale: 1.2
 
-flatten_state: true
+# flatten_state: true
 
 action_transform: multidiscrete:4
