--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,51 +1,51 @@
 # exp
 num_agents: 3
-num_obstacles: 7 # total number of obstacles, including capsules
+num_obstacles: 5 # total number of obstacles, including capsules
 obstacle_size: 0.05
-detect_range: 0.5
+# detect_range: 0.5
 
 cylinder:
-  num: 5
-  cyl0:
-    translation:
-      x: 0.
-      y: 0.
-      z: 0.
-    axis: 'Z'
-    radius: 0.3
-    height: 3.0
-  cyl1:
-    translation: 
-      x: -0.8
-      y: 0.
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl2:
-    translation: 
-      x: 0.8
-      y: 0.
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl3:
-    translation: 
-      x: 0.
-      y: 0.8
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl4:
-    translation: 
-      x: 0.
-      y: -0.8
-      z: 0.
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
+  num: 0
+#   cyl0:
+#     translation:
+#       x: 0.
+#       y: 0.
+#       z: 0.
+#     axis: 'Z'
+#     radius: 0.3
+#     height: 3.0
+#   cyl1:
+#     translation: 
+#       x: -0.8
+#       y: 0.
+#       z: 0.
+#     axis: 'Z'
+#     radius: 0.1
+#     height: 2.0
+#   cyl2:
+#     translation: 
+#       x: 0.8
+#       y: 0.
+#       z: 0.
+#     axis: 'Z'
+#     radius: 0.1
+#     height: 2.0
+#   cyl3:
+#     translation: 
+#       x: 0.
+#       y: 0.8
+#       z: 0.
+#     axis: 'Z'
+#     radius: 0.1
+#     height: 2.0
+#   cyl4:
+#     translation: 
+#       x: 0.
+#       y: -0.8
+#       z: 0.
+#     axis: 'Z'
+#     radius: 0.1
+#     height: 2.0
 
 v_drone: 1.0
 v_low: 1.3
@@ -66,7 +66,7 @@ use_dynamic: False
 
 # cl
 prob_curriculum: 0.9
-prob_decay: 2
+prob_decay: 0.5
 
 # hydra.job.chdir: false
 
@@ -75,11 +75,6 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# total_frames: 250_000_000
-# max_iters: -1
-# eval_interval: -1
-# save_interval: -1
-# seed: 0
 total_frames: 100_000_000_000
 max_iters: 30000
 eval_interval: 100
@@ -97,8 +92,8 @@ wandb:
   group: ${oc.select:..task.name}
   run_name: ${oc.select:..task.name,test}-${oc.select:..algo.name,none}
   job_type: train
-  entity: nics_marl
-  project: omnidrones
+  entity: tangwh
+  project: issac_drones
   mode: online # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
