--- a/cfg/task/HideAndSeek.yaml
+++ b/cfg/task/HideAndSeek.yaml
@@ -8,6 +8,7 @@ defaults:
 
 env:
   num_envs: 512
+  max_episode_length: 800
 
 drone_model: Crazyflie
 force_sensor: false
@@ -18,6 +19,72 @@ time_encoding: true
 # reward_motion_smoothness_weight: 0.0
 # reward_distance_scale: 1.2
 
+flatten_obs: true
 # flatten_state: true
 
 action_transform: multidiscrete:4
+
+# exp
+num_agents: 3
+num_obstacles: 5 # number of moving obstacles
+obstacle_size: 0.05
+detect_range: 0.8
+
+size_min: 1.0
+size_max: 1.0
+v_drone: 1.0
+v_low: 1.3
+v_high: 1.3
+v_obstacle_min: 1.0
+v_obstacle_max: 1.0
+obstacle_control_fre: 20
+
+fixed_config: False # if True, only eval max_config
+use_collision: 1
+use_speed_penalty: 1
+catch_radius: 0.15
+collision_radius: 0.01
+use_dynamic: False
+
+cylinder:
+  num: 5
+  cyl0:
+    translation:
+      x: 0.
+      y: 0.
+      z: 0.
+    axis: 'Z'
+    radius: 0.2
+    height: 3.0
+  cyl1:
+    translation: 
+      x: -0.7
+      y: 0.7
+      z: 0.
+    axis: 'Z'
+    radius: 0.1
+    height: 2.0
+  cyl2:
+    translation: 
+      x: 0.7
+      y: 0.7
+      z: 0.
+    axis: 'Z'
+    radius: 0.1
+    height: 2.0
+  cyl3:
+    translation: 
+      x: 0.7
+      y: -0.7
+      z: 0.
+    axis: 'Z'
+    radius: 0.1
+    height: 2.0
+  cyl4:
+    translation: 
+      x: -0.7
+      y: -0.7
+      z: 0.
+    axis: 'Z'
+    radius: 0.1
+    height: 2.0
