--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -21,20 +21,28 @@ rotor_configuration:
   - -1.0
   - 1.0
   force_constants:
-  - 2.88e-8 # kf
-  - 2.88e-8
-  - 2.88e-8
-  - 2.88e-8
+  - 3.168e-08 # cf7 opt
+  - 3.168e-08
+  - 3.168e-08
+  - 3.168e-08
+  # - 2.88e-8 # kf
+  # - 2.88e-8
+  # - 2.88e-8
+  # - 2.88e-8
   max_rotation_velocities:     
   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
   - 2315
   - 2315
   - 2315
   moment_constants:
-  - 7.24e-10
-  - 7.24e-10
-  - 7.24e-10
-  - 7.24e-10
+  - 7.964000000000001e-10 # cf7 opt
+  - 7.964000000000001e-10
+  - 7.964000000000001e-10
+  - 7.964000000000001e-10
+  # - 7.24e-10
+  # - 7.24e-10
+  # - 7.24e-10
+  # - 7.24e-10
   num_rotors: 4
   rotor_angles:
   - 0.78539816
