--- a/cfg/task/Track.yaml
+++ b/cfg/task/Track.yaml
@@ -24,8 +24,8 @@ reward_action_smoothness_weight: 0.
 reward_motion_smoothness_weight: 0.
 reward_distance_scale: 1.6
 
-# action_transform: rate
-action_transform: PIDrate
+action_transform: rate
+# action_transform: PIDrate
 history: true
 randomization:
   drone:
