--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -21,28 +21,28 @@ rotor_configuration:
   - -1.0
   - 1.0
   force_constants:
-  # - 3.168e-08 # cf7 opt
-  # - 3.168e-08
-  # - 3.168e-08
-  # - 3.168e-08
-  - 2.88e-8 # kf
-  - 2.88e-8
-  - 2.88e-8
-  - 2.88e-8
+  - 4.519483725231148e-08 # cf7 opt
+  - 4.519483725231148e-08
+  - 4.519483725231148e-08
+  - 4.519483725231148e-08
+  # - 2.88e-8 # kf
+  # - 2.88e-8
+  # - 2.88e-8
+  # - 2.88e-8
   max_rotation_velocities:     
   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
   - 2315
   - 2315
   - 2315
   moment_constants:
-  # - 7.964000000000001e-10 # cf7 opt
-  # - 7.964000000000001e-10
-  # - 7.964000000000001e-10
-  # - 7.964000000000001e-10
-  - 7.24e-10
-  - 7.24e-10
-  - 7.24e-10
-  - 7.24e-10
+  - 3.4283698464397085e-09 # cf7 opt
+  - 3.4283698464397085e-09
+  - 3.4283698464397085e-09
+  - 3.4283698464397085e-09
+  # - 7.24e-10
+  # - 7.24e-10
+  # - 7.24e-10
+  # - 7.24e-10
   num_rotors: 4
   rotor_angles:
   - 0.78539816
@@ -52,6 +52,6 @@ rotor_configuration:
   time_constant: 0.43
 controller_configuration:
   gain:
-  - 0.0052
-  - 0.0052
-  - 0.00025
+  - 0.00052
+  - 0.00052
+  - 2.5e-05
