TODO: compare sim and real motor thrust

--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -42,7 +42,8 @@ rotor_configuration:
   - 2.35619449
   - 3.92699082
   - 5.49778714
-  time_constant: 0.43
+  # time_constant: 0.43 # old version
+  time_constant: 0.046 # tau = dt / tau
 controller_configuration:
   gain:
   - 0.0052
