--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -43,7 +43,7 @@ rotor_configuration:
   - 3.92699082
   - 5.49778714
   # time_constant: 0.43 # old version
-  time_constant: 0.046 # tau = dt / tau
+  time_constant: 0.0178 # 1.0 - torch.exp(self.dt / tau)
 controller_configuration:
   gain:
   - 0.0052
