--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -45,9 +45,10 @@ rotor_configuration:
   - 2.35619449
   - 3.92699082
   - 5.49778714
+  # time_constant: 0.5
   time_constant: 0.5
 controller_configuration:
   gain:
-  - 0.00052
-  - 0.0009756599593733796
-  - 2.5e-05
+  - 0.0052
+  - 0.0052
+  - 0.00025
