--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -21,8 +21,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Track_star_origin_clip60_100HZ_Pcontroller
-  run_name: Track_star_cf9optkf_clip60_100HZ_Pcontroller
+  run_name: Track_star_origin_50Hz
+  # run_name: Track_star_cf9opt_dynamics_controller_clip60_100HZ_Pcontroller_woeffort
   # run_name: debug
   job_type: train
   entity: chenjy
