--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -50,16 +50,16 @@ rotor_configuration:
   - 2.35619449
   - 3.92699082
   - 5.49778714
-  time_constant: 0.0178 # 1.0 - torch.exp(self.dt / tau)
-  # time_constant: 0.01 # opt
+  # time_constant: 0.0178 # 1.0 - torch.exp(self.dt / tau)
+  time_constant: 0.01 # opt
 controller_configuration:
   gain:
-  # - 0.00052 # opt medium
-  # - 0.00052
-  # - 2.5e-05
+  - 0.00052 # opt medium
+  - 0.00052
+  - 2.5e-05
   # - 5.2e-06 # opt best
   # - 0.0010592696236279627
   # - 2.5e-07
-  - 0.0052
-  - 0.0052
-  - 0.00025
+  # - 0.0052 # origin
+  # - 0.0052
+  # - 0.00025
