--- a/cfg/task/Track.yaml
+++ b/cfg/task/Track.yaml
@@ -27,8 +27,8 @@ reward_distance_scale: 1.6
 action_transform: rate
 # action_transform: PIDrate
 # history: true
-randomization:
-  drone:
-    train:
-      mass_scale: [1., 1.3]
+# randomization:
+#   drone:
+#     train:
+#       mass_scale: [1., 1.3]
 #       inertia_scale: [0.7, 1.3]
