Update: original version

--- a/cfg/task/HideAndSeek.yaml
+++ b/cfg/task/HideAndSeek.yaml
@@ -19,7 +19,7 @@ time_encoding: true
 # reward_motion_smoothness_weight: 0.0
 # reward_distance_scale: 1.2
 
-flatten_obs: true
+# flatten_obs: true
 # flatten_state: true
 
 action_transform: multidiscrete:4
