--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -1,3 +1,56 @@
+# # origin
+# update_sim: True
+# name: crazyflie
+# inertia:
+#   xx: 1.4e-5
+#   xy: 0.0
+#   xz: 0.0
+#   yy: 1.4e-5
+#   yz: 0.0
+#   zz: 2.17e-5
+# mass: 0.03
+# l: 0.096
+# drag_coef: 0.2
+# rotor_configuration:
+#   arm_lengths:
+#   - 0.043
+#   - 0.043
+#   - 0.043
+#   - 0.043
+#   directions:
+#   - -1.0
+#   - 1.0
+#   - -1.0
+#   - 1.0
+#   force_constants:
+#   - 2.88e-8 # KF = 4 * max_rot_vel**2 * force_constants / mg
+#   - 2.88e-8
+#   - 2.88e-8
+#   - 2.88e-8
+#   max_rotation_velocities:     
+#   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
+#   - 2315
+#   - 2315
+#   - 2315
+#   moment_constants:
+#   - 7.24e-10 # origin
+#   - 7.24e-10
+#   - 7.24e-10
+#   - 7.24e-10
+#   num_rotors: 4
+#   rotor_angles:
+#   - 0.78539816
+#   - 2.35619449
+#   - 3.92699082
+#   - 5.49778714
+#   time_constant: 0.0178 # 1.0 - torch.exp(self.dt / tau)
+# controller_configuration:
+#   gain:
+#   - 0.0052 # origin
+#   - 0.0052
+#   - 0.00025
+
+# opt1
 update_sim: True
 name: crazyflie
 inertia:
@@ -22,41 +75,81 @@ rotor_configuration:
   - -1.0
   - 1.0
   force_constants:
-  # - 2.0e-8 # opt
-  # - 2.0e-8
-  # - 2.0e-8
-  # - 2.0e-8
-  - 2.88e-8 # KF = 4 * max_rot_vel**2 * force_constants / mg
-  - 2.88e-8
-  - 2.88e-8
-  - 2.88e-8
+  - 2.0e-8 # opt
+  - 2.0e-8
+  - 2.0e-8
+  - 2.0e-8
   max_rotation_velocities:     
   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
   - 2315
   - 2315
   - 2315
   moment_constants:
-  # - 7.24e-11 # opt
-  # - 7.24e-11
-  # - 7.24e-11
-  # - 7.24e-11
-  - 7.24e-10
-  - 7.24e-10
-  - 7.24e-10
-  - 7.24e-10
+  - 7.24e-11 # opt
+  - 7.24e-11
+  - 7.24e-11
+  - 7.24e-11
   num_rotors: 4
   rotor_angles:
   - 0.78539816
   - 2.35619449
   - 3.92699082
   - 5.49778714
-  time_constant: 0.0178 # 1.0 - torch.exp(self.dt / tau)
-  # time_constant: 0.01 # opt
+  time_constant: 0.01 # opt
 controller_configuration:
   gain:
-  # - 0.00052 # opt medium
-  # - 0.00052
-  # - 2.5e-05
-  - 0.0052 # origin
-  - 0.0052
-  - 0.00025
+  - 0.00052 # opt medium
+  - 0.00052
+  - 2.5e-05
+
+# # opt2
+# update_sim: True
+# name: crazyflie
+# inertia:
+#   xx: 1.4e-5
+#   xy: 0.0
+#   xz: 0.0
+#   yy: 1.4e-5
+#   yz: 0.0
+#   zz: 2.17e-5
+# mass: 0.03
+# l: 0.096
+# drag_coef: 0.2
+# rotor_configuration:
+#   arm_lengths:
+#   - 0.043
+#   - 0.043
+#   - 0.043
+#   - 0.043
+#   directions:
+#   - -1.0
+#   - 1.0
+#   - -1.0
+#   - 1.0
+#   force_constants:
+#   - 2.0e-8 # opt
+#   - 2.0e-8
+#   - 2.0e-8
+#   - 2.0e-8
+#   max_rotation_velocities:     
+#   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
+#   - 2315
+#   - 2315
+#   - 2315
+#   moment_constants:
+#   - 7.24e-11 # opt
+#   - 7.24e-11
+#   - 7.24e-11
+#   - 7.24e-11
+#   num_rotors: 4
+#   rotor_angles:
+#   - 0.78539816
+#   - 2.35619449
+#   - 3.92699082
+#   - 5.49778714
+#   time_constant: 0.1 # opt
+# controller_configuration:
+#   gain:
+#   - 0.00052 # opt medium
+#   - 0.00052
+#   - 2.5e-05
