fix bugs in reward

--- a/cfg/task/HideAndSeek_static.yaml
+++ b/cfg/task/HideAndSeek_static.yaml
@@ -14,7 +14,8 @@ drone_model: Crazyflie
 force_sensor: false
 time_encoding: true
 
-action_transform: multidiscrete:4
+# action_transform: multidiscrete:4
+action_transform: rate
 
 # exp
 num_agents: 3
