--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -14,8 +14,8 @@ env: ${task.env}
 
 total_frames: 100_000_000_000
 max_iters: -1
-eval_interval: 200
-save_interval: 200
+eval_interval: 10
+save_interval: 10
 seed: 0
 
 viewer:
@@ -25,13 +25,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: size0_7_vel1_3_detect0_8_newreward_ratecontroller
+  # run_name: size0_7_vel1_3_detect0_8_newreward_ratecontroller
   run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  mode: online
-  # mode: disabled # set to 'disabled' when debugging locally
+  # mode: online
+  mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
@@ -39,6 +39,7 @@ wandb:
 defaults:
   # - task: HideAndSeek
   # - task: HideAndSeek_static
-  - task: HideAndSeek_sparse
+  # - task: HideAndSeek_sparse
+  - task: HideAndSeek_circle
   - algo: mappo
   - _self_
