--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -2,8 +2,8 @@
 prob_curriculum: 0.9
 prob_decay: 0.5
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/size0_7_vel1_3_detect0_8_static/02-10_10-12/wandb/run-20240210_101225-hpf71avr/files/checkpoint_1546780672.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/size0_7_vel1_3_detect0_8_static/02-10_10-12/wandb/run-20240210_101225-hpf71avr/files/checkpoint_1546780672.pt
+# model_dir: null
 
 # hydra.job.chdir: false
 
@@ -25,7 +25,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: size0_7_vel1_3_detect0_8_oldreward_ratecontroller_circle
+  run_name: size0_7_vel1_3_detect0_8_circle
   # run_name: debug
   job_type: train
   entity: chenjy
