--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -2,8 +2,8 @@
 prob_curriculum: 0.9
 prob_decay: 0.5
 
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/size0_7_vel1_3_detect0_8_oldreward_ratecontroller_circle/02-16_22-28/wandb/run-20240216_222805-yujtf0kh/files/checkpoint_2595356672.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/debug/02-17_17-37/wandb/run-20240217_173742-amslfurz/files/checkpoint_320.pt
+model_dir: null
 
 # hydra.job.chdir: false
 
