--- a/cfg/task/HideAndSeek_multiprey.yaml
+++ b/cfg/task/HideAndSeek_multiprey.yaml
@@ -1,4 +1,4 @@
-name: HideAndSeek_circle
+name: HideAndSeek_multiprey
 
 defaults:
   # see https://hydra.cc/docs/advanced/overriding_packages/
@@ -7,7 +7,7 @@ defaults:
   - /base/randomization_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 10
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -19,10 +19,9 @@ action_transform: rate
 
 # exp
 num_agents: 3
-detect_range: 0.5
 
-size_min: 0.7
-size_max: 0.7
+size_min: 1.0
+size_max: 1.0
 v_drone: 1.0
 v_low: 1.3
 v_high: 1.3
