--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -2,8 +2,8 @@
 prob_curriculum: 0.9
 prob_decay: 0.5
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/size0_7_vel1_3_detect0_8_oldreward_ratecontroller_circle/02-16_22-28/wandb/run-20240216_222805-yujtf0kh/files/checkpoint_2595356672.pt
-model_dir: null
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/circle_vel1_3.pt
+# model_dir: null
 
 # hydra.job.chdir: false
 
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: size0_7_vel1_3_detect0_8_circle_2pursuer_load3pursuer
-  run_name: check_load
+  run_name: size0_7_vel1_3_detect0_5_circle_loaddetect0_5
+  # run_name: check_load
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -40,7 +40,8 @@ defaults:
   # - task: HideAndSeek
   # - task: HideAndSeek_static
   # - task: HideAndSeek_sparse
-  # - task: HideAndSeek_circle
-  - task: HideAndSeek_full
+  - task: HideAndSeek_circle
+  # - task: HideAndSeek_full
+  # - task: HideAndSeek_multiprey
   - algo: mappo
   - _self_
