--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -2,8 +2,8 @@
 prob_curriculum: 0.9
 prob_decay: 0.5
 
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/circle_vel1_3.pt
-# model_dir: null
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/circle_vel1_3.pt
+model_dir: null
 
 # hydra.job.chdir: false
 
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: size0_7_vel1_3_detect0_5_circle_loaddetect0_5
-  # run_name: check_load
+  run_name: size1_0_vel1_3_static
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -38,9 +38,9 @@ wandb:
 
 defaults:
   # - task: HideAndSeek
-  # - task: HideAndSeek_static
+  - task: HideAndSeek_static
   # - task: HideAndSeek_sparse
-  - task: HideAndSeek_circle
+  # - task: HideAndSeek_circle
   # - task: HideAndSeek_full
   # - task: HideAndSeek_multiprey
   - algo: mappo
