--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -25,8 +25,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: size1_0_vel1_3_circle_static
-  # run_name: debug
+  # run_name: size1_0_vel1_3_circle_static
+  run_name: 003_debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
