--- a/cfg/task/HideAndSeek_circle_static.yaml
+++ b/cfg/task/HideAndSeek_circle_static.yaml
@@ -20,8 +20,8 @@ action_transform: rate
 # exp
 num_agents: 3
 
-size_min: 0.7
-size_max: 0.7
+size_min: 1.0
+size_max: 1.0
 v_drone: 1.0
 v_low: 1.3
 v_high: 1.3
@@ -35,21 +35,23 @@ use_dynamic: False
 
 cylinder:
   num: 3
-  cyl0:
-    translation: 
-      x: 0.0
-      y: 0.35
-    axis: 'Z'
-    radius: 0.1
-  cyl1:
-    translation: 
-      x: 0.303
-      y: -0.175
-    axis: 'Z'
-    radius: 0.1
-  cyl2:
-    translation: 
-      x: -0.303
-      y: -0.175
-    axis: 'Z'
-    radius: 0.1
+  axis: 'Z'
+  radius: 0.1
+  # cyl0:
+  #   translation: 
+  #     x: 0.0
+  #     y: 0.35
+  #   axis: 'Z'
+  #   radius: 0.1
+  # cyl1:
+  #   translation: 
+  #     x: 0.303
+  #     y: -0.175
+  #   axis: 'Z'
+  #   radius: 0.1
+  # cyl2:
+  #   translation: 
+  #     x: -0.303
+  #     y: -0.175
+  #   axis: 'Z'
+  #   radius: 0.1
