--- a/cfg/task/HideAndSeek_circle_static.yaml
+++ b/cfg/task/HideAndSeek_circle_static.yaml
@@ -18,7 +18,8 @@ time_encoding: true
 action_transform: rate
 
 # exp
-num_agents: 3
+num_agents: 4
+detect_range: 0.8 # -1.0 means fully-observable
 
 size_min: 1.0
 size_max: 1.0
@@ -29,25 +30,10 @@ v_high: 1.3
 fixed_config: False # if True, only eval max_config
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.5
+catch_radius: 0.15
 collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
-  num: 2
-  cyl0:
-    translation:
-      x: 0.
-      y: -0.5
-      z: 0.5
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
-  cyl1:
-    translation: 
-      x: 0.
-      y: 0.5
-      z: 0.5
-    axis: 'Z'
-    radius: 0.1
-    height: 2.0
+  use_cylinder: 1 # TODO
+  num: 10
