--- a/cfg/task/HideAndSeek_circle_static_UED.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED.yaml
@@ -7,7 +7,7 @@ defaults:
   - /base/randomization_base@_here_
 
 env:
-  num_envs: 1000
+  num_envs: 2048
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -22,7 +22,7 @@ use_inner_cl: 0
 capture_threshold: 0.95
 
 # outer cl
-use_outer_cl: 1
+use_outer_cl: 0
 
 # evalution scenario
 evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
@@ -45,4 +45,5 @@ use_dynamic: False
 cylinder:
   size: 0.2
   num: 8
-  num_active: 0
+  max_active: 5
+  random_active: True
